# course

basic/universal/zminni/: CMakeLists.txt  main.cpp
